refactor: Improve MapStruct mappings, DTO usage, and exception handling
This commit introduces significant refactorings across mappers, services, and controllers to enhance code quality, improve DTO usage, resolve MapStruct compilation issues, and standardize exception handling.

Key changes include:

Mappers:
- **OwnerSummaryMapper**: Implemented  annotations for mapping methods (, , ), providing explicit names. Added an  for polymorphic  to  mapping.
- **VehicleMapper**: Updated  method to use  for the  field, explicitly directing MapStruct to .
- **SubscriptionContractMapper**: Injected  via  and updated  method to use  for the  field.
- **HourlyRateMapper**: Ensured correct mapping between  and .

Controllers:
- **OwnerController**: Fixed malformed URI path in  method.
- **VehicleController**: Added  header to  responses in the  method using .
- **HourlyRateController**: Refactored to use  for request/response bodies, return  for all endpoints, and include  header for  operations.

Services:
- **HourlyRateService**: Updated  and  methods to accept/return s. Standardized exception handling to use .
- **VehicleService**: Replaced  with  in  and  methods. Changed  injection to constructor-based.
- **SubscriptionContractService**: Replaced  with  in  method.
- **PlanService**: Replaced  with  in , , and  methods.
- **PlanRateService**: Replaced  with  in .
- **OwnerService**: Corrected  to  conversion in  and  methods.

Entities & Repositories:
- **Payment**: Added  to the uid=197609(felip) gid=197609 groups=197609 field.
- **HourlyRateRepository**: Removed  due to incorrect type signature.
- **SubscriptionContractRepository**: Corrected the  query to properly use the  parameter.

Configuration:
- **AuthService**: Changed  field injections to constructor-based injection.

These changes collectively improve the robustness, maintainability, and adherence to best practices of the application.